# Enable configuration exclusively for applications dependent on the RCP server.
if(RPC_ENABLED)
    if(IS_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/file_system")
        add_subdirectory(file_system)
    endif()
    if(IS_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/proto_swc_setup")
        add_subdirectory(proto_swc_setup)
    endif()
    if (${SWC_EXT_API_ENABLE})
        if(IS_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/proto_swc_ext_setup")
            add_subdirectory(proto_swc_ext_setup)
        endif()
    endif()
    if(IS_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/pw_hdlc_idp")
        add_subdirectory(pw_hdlc_idp)
    endif()
    if(IS_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/pw_sys_io_idp")
        add_subdirectory(pw_sys_io_idp)
    endif()
    if(IS_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/rpc_server")
        add_subdirectory(rpc_server)
    endif()
endif()
if(RTOS_ENABLED)
    if(IS_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/tinyusb_module")
        add_subdirectory(tinyusb_module)
    endif()
else ()
    if(IS_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/tinyusb_module_baremetal")
        add_subdirectory(tinyusb_module_baremetal)
    endif()
endif()
