if (APP STREQUAL "Connection-Priority")
    add_subdirectory(connection_priority)
elseif (APP STREQUAL "Audio-Unidirectional")
    add_subdirectory(audio_unidirectional)
elseif (APP STREQUAL "Audio-Bidirectional")
    add_subdirectory(audio_bidirectional)
elseif (APP STREQUAL "Fragmentation")
    add_subdirectory(fragmentation)
elseif (APP STREQUAL "Hello-World")
    add_subdirectory(hello_world)
elseif (APP STREQUAL "Hello-World-RTOS")
    add_subdirectory(hello_world_rtos)
elseif (APP STREQUAL "Star-Network")
    add_subdirectory(star_network)
elseif (APP STREQUAL "Datalink")
    add_subdirectory(datalink)
elseif (APP STREQUAL "All")
    add_subdirectory(connection_priority)
    add_subdirectory(audio_unidirectional)
    add_subdirectory(audio_bidirectional)
    add_subdirectory(fragmentation)
    add_subdirectory(hello_world)
    add_subdirectory(star_network)
    add_subdirectory(datalink)
endif()
